progressPerfil & downloads-list -> add divider-line - fix alignment

--- a/dist-palta/css/palta-adminLTE.css
+++ b/dist-palta/css/palta-adminLTE.css
@@ -27,10 +27,10 @@
   height: 0.5rem;
 }
 
-.download-item{
+.table-item{
   padding: 15px 0px;
   margin: 0px 15px;
   border-bottom: 1px solid #ccc;
 }
 
-.row:last-child .download-item{border-bottom: none;}
+.table-item:last-child {border-bottom: none;}
